<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e6e6fa"
    android:gravity="center|top"
    tools:context=".StartActivity" >
    <LinearLayout
        android:id="@+id/buttons_view"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back_text" />

        <Button
            android:id="@+id/email_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email" />
    </LinearLayout>
    <ScrollView
        android:id="@+id/main_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true" 
        android:layout_above="@id/buttons_view" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:keepScreenOn="true"
                android:text="@string/more_info_text"
                android:textColor="#fff"
                android:textSize="15sp"
                android:padding="12dip"  />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>