<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#e6e6fa"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".QuestionActivity" >

    <LinearLayout
        android:id="@+id/buttons_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"	
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay"
        android:orientation="horizontal">

        <Button
            android:id="@+id/next_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_question" />
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/main_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/buttons_view"  >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/question_placeholder"
                android:textColor="@color/black_text"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pattern_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw_pattern" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>