<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6fa"
    tools:context=".QuestionActivity" >

    <ScrollView
        android:id="@+id/fullscreen_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:keepScreenOn="true"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/question_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:keepScreenOn="true"
                android:text="@string/question_placeholder"
                android:textColor="@color/black_text"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/stringEntryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#33b5e5"
                android:textSize="25sp"
				android:hint="@string/string_question_text" >
                <requestFocus />
            </EditText>

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/next_button"
                style="?buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next_question" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>